--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
          <body>
                   <h1>MY WEBSITE</hl>
                   <p>My name is Sagnik Pal .My roll no. is 21 and admission no. is 01800. I read in class 8 in Dav Public School . </p>
-                  <img src=".jpeg" />
+                  ![jpg](https://user-images.githubusercontent.com/102792485/162580723-3d24d27c-6a68-4f14-b07a-21960dde404c.jpg)
                   <body bgcolor="green">
          </body>
 </html>
