--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
          <body>
                   <h1>MY WEBSITE</hl>
                   <p>My name is Sagnik Pal .My roll no. is 21 and admission no. is 01800. I read in class 8 in Dav Public School . </p>
-                  <l> herf="contact.html">Click here to open DAV Public School,Haldia's official website <l/>
+                  <a>href="https://www.w3schools.com">This is a link</a>
                   <body bgcolor="green">
          </body>
 </html>
